Add initial support for Hebrew (RTL)
This includes setting the page language in the <html> tag,
and setting element's direction accordingly.

--- a/website_2024/themes/PyCon-Israel-Flex/templates/base.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/base.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 <!DOCTYPE html>
-<html lang="{{ DEFAULT_LANG }}">
+{% block htmltag %}<html lang="{{ DEFAULT_LANG }}">{% endblock %}
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
