--- a/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
+++ b/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
@@ -1,5 +1,10 @@
 @import "variables.less";
 
+*:lang(he) {
+  direction: rtl;
+}
+
+
 html, body {
   width: 100%;
   height: 100%;
@@ -169,7 +174,7 @@ main {
       }
 
       .translations {
-        float: right;
+        float: inline-end;
 
         .active {
           font-weight: 600;
