--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/sidebar.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/sidebar.html
@@ -48,7 +48,7 @@
         {%- endif %}
 
         {% if DISPLAY_PAGES_ON_MENU %}
-          {% for page in pages %}
+          {% for page in pages if (not PAGE_SELECTION_FILTER) or PAGE_SELECTION_FILTER(page) %}
             <li>
               <a target="{{ get_target(SITEURL) }}"
                  href="{{ SITEURL }}/{{ page.url }}{% if not DISABLE_URL_HASH %}#{{ page.slug }}{% endif %}">
