Style fixes for better RTL support

--- a/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
+++ b/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
@@ -580,10 +580,15 @@ ul.social {
     }
   }
 
+  aside:lang(he) {
+      left: default;
+      right: 0;
+  }
+
   main {
     height: 100vh;
     position: relative;
-    padding-left: 25vw;
+    padding-inline-start: 25vw;
 
     article {
       max-width: 760px;
