--- a/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
+++ b/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
@@ -118,6 +118,20 @@ aside {
       }
     }
   }
+
+  .translations {
+    padding-bottom: 0;
+    text-align: start;
+
+    .active {
+      font-weight: 600;
+    }
+  }
+  .translations:lang(he) {
+    left: default;
+    right: 0;
+  }
+
 }
 
 main {
