Enhance call for sponsors, add mail address
Refs #3

--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
@@ -33,7 +33,10 @@
     </section>
     <section id="sponsorships">
       <h2>חסויות</h2>
-      <p class="call-for-sponsors">בואו להשתתף בכנס כנותני חסות!</p>
+      <h4 class="call-for-sponsors">בואו להשתתף בכנס כנותני חסות!</h4>
+      <p class="call-for-sponsors">
+	לפרטים, כתבו ל־<a href="mailto:sponsors@pycon.org.il">sponsors@pycon.org.il</a>
+      </p>
       <div class="gold-sponsor">
 	<p></p>
       </div>
