--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -34,7 +34,11 @@
     </section>
     <section id="sponsorships">
       <h2>Sponsorships</h2>
-      <p class="call-for-sponsors">Become a Sponsor!</p>
+      <h4 class="call-for-sponsors">Become a Sponsor!</h4>
+      <p class="call-for-sponsors">
+	For details, please write to
+	<a href="mailto:sponsors@pycon.org.il">sponsors@pycon.org.il</a>
+      </p>
       <div class="gold-sponsor">
 	<p></p>
       </div>
