Add some content and links about PyCon Israel 2023
With previous commit, fixes #3

--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
@@ -31,6 +31,19 @@
 	ומפגשים, הנאה ושיתופי פעולה, סביב שפת פייתון.
       </p>
     </section>
+    <section id="pycon-history">
+      <p>
+      כנסי פייקון ישראל מתקיימים מאז 2016 - הנה הרצאה מהכנס של 2023
+      <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/barzik-pycon23.jpg"
+	   alt="הרצאה מתוך כנס פייקון ישראל 2023, המרצה נראה מהגב, קהל באולם"
+	   title="הרצאה מכנס פייקון ישראל 2023">
+      בשנת 2023 התקיימו <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">יום הרצאות</a>
+      ו<a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">יום סדנאות</a>;
+      את ההרצאות ניתן לראות ב<a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">וידאו</a>.
+      </p><p>
+	לפרטים נוספים, בקרו ב<a href="https://pycon.org.il/2023/heb/home.html">אתר כנס 2023</a>.
+      </p>
+    </section>
     <section id="sponsorships">
       <h2>חסויות</h2>
       <h4 class="call-for-sponsors">בואו להשתתף בכנס כנותני חסות!</h4>
