--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -32,6 +32,23 @@
 	all around Python.
       </p>
     </section>
+    <section id="pycon-history">
+      <p>
+	PyCon Israel has been taking place since 2016; this is a talk from the 2023 edition.
+      <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/barzik-pycon23.jpg"
+	   alt="A presentation from PyCon Israel 2023, speaker seen from back and audience in hall"
+	   title="A presentation from PyCon Israel 2023">
+      In 2023 we had <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">a day of talks</a>
+      and <a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">a day of workshops</a>;
+      <a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">
+	videos of the talks
+      </a>
+      are available.
+      </p><p>
+	For more details, visit the
+	<a href="https://pycon.org.il/2023/heb/home.html">2023 conference website</a>.
+      </p>
+    </section>
     <section id="sponsorships">
       <h2>Sponsorships</h2>
       <h4 class="call-for-sponsors">Become a Sponsor!</h4>
