Modify footer to reflect copyright and theme more accurately
Refs #2

--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/copyright.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/copyright.html
@@ -1,4 +1,4 @@
-<p>&copy; {{ COPYRIGHT_YEAR }} {{ COPYRIGHT_NAME }}</p>
+<p><bdi lang="en">&copy; {{ COPYRIGHT_YEAR }} {{ COPYRIGHT_NAME }}</bdi></p>
 {% include "partial/flex.html" %}
 {% if STATUSCAKE %}
   {% include "partial/statuscake.html" %}
