--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/flex.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/flex.html
@@ -1,6 +1,6 @@
 <p>
 {{
-  _('Built with %(pelican_url)s using %(flex_url)s theme',
+  _('Built with %(pelican_url)s using a theme based on %(flex_url)s',
     pelican_url='<a href="http://getpelican.com" target="_blank">Pelican</a>',
     flex_url='<a href="http://bit.ly/flex-pelican" target="_blank">Flex</a>'|safe)
 }}
