--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/sidebar.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/sidebar.html
@@ -4,7 +4,11 @@
       <a class="active" href="{{ SITEURL }}">{{LANGUAGE_NAMES[DEFAULT_LANG]}}</a>
     </bdi>
     {% for lang,lang_siteurl in extra_siteurls.items() %}
-        <bdi><a href="{{ lang_siteurl }}/">{{ LANGUAGE_NAMES[lang] }}</a></bdi>
+    {%- if RELATIVE_URLS %}
+    <bdi><a href="{{ SITEURL }}/{{ relpath_to_site(DEFAULT_LANG, lang) }}">{{ LANGUAGE_NAMES[lang] }}</a></bdi>
+    {%- else %}
+    <bdi><a href="{{ lang_siteurl }}/">{{ LANGUAGE_NAMES[lang] }}</a></bdi>
+    {%- endif %}
     {% endfor %}
   </div>
 
