Fix paste-o -- English home was linking to 2023 Hebrew home

--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -46,7 +46,7 @@
       are available.
       </p><p>
 	For more details, visit the
-	<a href="https://pycon.org.il/2023/heb/home.html">2023 conference website</a>.
+	<a href="https://pycon.org.il/2023/index.html">2023 conference website</a>.
       </p>
     </section>
     <section id="sponsorships">
