Added homepage "plan" sections
Per Michal's suggestions on Slack

--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -19,10 +19,23 @@
 <article class="single">
   <header>
     <h1 id="{{ page.slug }}">PyCon Israel {{ PYCON.YEAR }}</h1>
-    <h3><time datetime="2024-09-16">16.9.2024</time></h3>
-    <h3>Cinema City, Gelilot</h3>
+    <h3><time datetime="2024-09-16">16.9.2024</time><br/>
+    Cinema City, Gelilot</h3>
   </header>
   <div>
+    <section id="plan">
+      <p><b>CFP</b> to open in early <b>May</b></p>
+      <p><b>Schedule</b> to be published in early <b>July</b></p>
+      <p><b>Tickets</b> will also be available in <b>July</b></p>
+      <div class="subscribe">
+	Subscribe to our
+	<a class="sc-envelope"
+	   href="https://lists.hamakor.org.il/postorius/lists/news.pycon.org.il/">
+	  news list
+	</a>
+	to receive updates and news about the conference
+      </div>
+    </section>
     <section id="about">
       <h2>About PyCon Israel</h2>
       <p>
