--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
@@ -19,10 +19,21 @@
 <article class="single">
   <header>
     <h1 id="{{ page.slug }}">פייקון ישראל {{ PYCON.YEAR }}</h1>
-    <h3><time datetime="2024-09-16">16.9.2024</time></h3>
-    <h3>סינמה סיטי, גלילות</h3>
+    <h3><time datetime="2024-09-16">16.9.2024</time><br/>
+    סינמה סיטי, גלילות</h3>
   </header>
   <div>
+    <section id="plan">
+      <p><b>קריאה להצעות תוכן (CFP)</b> תיפתח בתחילת <b>מאי</b></p>
+      <p><b>תוכנית הכנס</b> תפורסם בתחילת <b>יולי</b></p>
+      <p><b>כרטיסים</b> צפויים גם הם להיות מוצעים ב<b>יולי</b></p>
+      <div class="subscribe">
+	הרשמו ל<a class="sc-envelope"
+	   href="https://lists.hamakor.org.il/postorius/lists/news.pycon.org.il/">רשימת התפוצה
+	</a>
+	כדי לקבל חדשות ועדכונים על הכנס
+      </div>
+    </section>
     <section id="about">
       <h2>פייקון ישראל</h2>
       <p>
