--- a/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
+++ b/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
@@ -105,7 +105,7 @@ aside {
 
     img {
       border-radius: 1%;
-      max-width: 140px;
+      max-width: 80%;
     }
 
     h1 {
@@ -121,10 +121,10 @@ aside {
   nav {
     ul {
       li {
-        display: inline;
+        /* display: inline; */
         line-height: 1.6em;
         font-size: 1.28em;
-        text-transform: lowercase;
+        /* text-transform: lowercase; */
       }
     }
   }
