Oopsie. This is part of PR #12

--- a/website_2024/themes/PyCon-Israel-Flex/templates/base.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/base.html
@@ -196,6 +196,7 @@
   {% include 'partial/github.html' %}
   {% include 'partial/stork.html' %}
   {% include 'partial/cf_analytics.html' %}
+  {% include 'partial/bringthemhomenow.html' %}
 
   {% block additional_js %}{% endblock %}
 </body>
