WIP: Improve design, add gallery of pictures from Pycon 2023

--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -41,6 +41,33 @@
 	  <a href="https://lists.hamakor.org.il/postorius/lists/news.pycon.org.il">click here</a>
       </ul>
     </section>
+    <section id="pictures">
+	<span class="r1c1">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-far.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r1c2">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/shai-back.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r2c1"> 
+          <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-shai.jpg"
+	       alt="A presentation from PyCon Israel 2023"
+	       title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r2c2">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/pypods.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r2c3">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/elad.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+    </section>
     <section id="about">
       <h2>About PyCon Israel</h2>
       <p>
@@ -52,9 +79,10 @@
       <p>
 	PyCon Israel has been taking place since 2016; this is a talk
 	from the 2023 edition.
-      <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/barzik-pycon23.jpg"
-	   alt="A presentation from PyCon Israel 2023, speaker seen from back and audience in hall"
-	   title="A presentation from PyCon Israel 2023">
+	<!--
+	  -->
+      </p>
+      <p>
       In 2023 we had <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">a day of talks</a>
       and <a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">a day of workshops</a>;
       <a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">
