--- a/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
+++ b/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
@@ -307,6 +307,41 @@ main {
       margin-right: 5px;
     }
 
+    section#pictures {
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: repeat(5, 10vh);
+	grid-gap: 0;
+	direction: ltr;
+
+	span, span img {
+	    width: 100%;
+	    height: 100%;
+	    object-fit: cover;
+	    display: block;
+	}
+	.r1c1 {
+	    grid-column: 1 / span 3;
+	    grid-row: 1 / span 3;
+	}
+	.r1c2 {
+	    grid-column: 4 / span 3;
+	    grid-row: 1 / span 3;
+	}
+	.r2c1 {
+	    grid-column: 1 / span 2;
+	    grid-row: 4 / span 2;
+	}
+	.r2c2 {
+	    grid-column: 3 / span 2;
+	    grid-row: 4 / span 2;
+	}
+	.r2c3 {
+	    grid-column: 5 / span 2;
+	    grid-row: 4 / span 2;
+	}
+    }
+
     .toc {
       margin-top: 2em;
 
