--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
@@ -41,6 +41,33 @@
 	  <a href="https://lists.hamakor.org.il/postorius/lists/news.pycon.org.il">לחצו כאן</a>
       </ul>
     </section>
+    <section id="pictures">
+	<span class="r1c1">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-far.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r1c2">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/shai-back.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r2c1"> 
+          <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-shai.jpg"
+	       alt="A presentation from PyCon Israel 2023"
+	       title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r2c2">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/pypods.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+	<span class="r2c3">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/elad.jpg"
+		 alt="A presentation from PyCon Israel 2023"
+		 title="A presentation from PyCon Israel 2023">
+	</span>
+    </section>
     <section id="about">
       <h2>פייקון ישראל</h2>
       <p>
@@ -50,9 +77,6 @@
       </p>
       <p>
       כנסי פייקון ישראל מתקיימים מאז 2016 - הנה הרצאה מהכנס של 2023
-      <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/barzik-pycon23.jpg"
-	   alt="הרצאה מתוך כנס פייקון ישראל 2023, המרצה נראה מהגב, קהל באולם"
-	   title="הרצאה מכנס פייקון ישראל 2023">
       בשנת 2023 התקיימו <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">יום הרצאות</a>
       ו<a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">יום סדנאות</a>;
       את ההרצאות ניתן לראות ב<a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">וידאו</a>.
