Added about texts

--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -52,7 +52,7 @@
 		 alt="A presentation from PyCon Israel 2023"
 		 title="A presentation from PyCon Israel 2023">
 	</span>
-	<span class="r2c1"> 
+	<span class="r2c1">
           <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-shai.jpg"
 	       alt="A presentation from PyCon Israel 2023"
 	       title="A presentation from PyCon Israel 2023">
@@ -71,25 +71,41 @@
     <section id="about">
       <h2>About PyCon Israel</h2>
       <p>
-	PyCon Israel 2024 will include a day of talks at Cinema City,
-	Gelilot, and a day of workshops (location to be announced).
-	Two days of learning and socializing, fun and collaboration,
-	all around Python.
+	PyCon Israel is a conference dedicated to the Python
+	programming language, related technologies, and their use. It
+	is an event for practitioners to share knowledge and
+	experiences, an opportunity to network, and an occasion to
+	have some fun.
       </p>
       <p>
-	PyCon Israel has been taking place since 2016; this is a talk
-	from the 2023 edition.
-	<!--
-	  -->
+	The conference is the largest gathering of this community in
+	Israel. It is held annually, almost every summer since
+	2016. In the spirit of Open Source, it is produced by a team
+	of volunteers, under the auspices of Hamakor, the Israeli Free
+	Software and Open Source organization.
       </p>
       <p>
-      In 2023 we had <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">a day of talks</a>
-      and <a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">a day of workshops</a>;
-      <a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">
-	videos of the talks
-      </a>
-      are available.
-      </p><p>
+	PyCon is a diverse conference dedicated to providing an
+	enjoyable experience to everyone - and features international
+	keynote speakers and talks from local Python experts, as well
+	as community-building activities.
+      </p>
+      <p>
+	PyCon Israel 2024 will include a day of talks at Cinema
+	City, Gelilot, and a day of workshops (location to be
+	announced).  Two days of learning and socializing, fun and
+	collaboration, all around Python &mdash; continuing the
+	tradition started in 2016.
+      </p>
+      <p>
+	In 2023 we
+	had <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">a
+	day of talks</a>
+	and <a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">a
+	day of workshops</a>;
+	<a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">
+	videos of the talks </a>are available.
+      <br/>
 	For more details, visit the
 	<a href="https://pycon.org.il/2023/index.html">2023 conference website</a>.
       </p>
