--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
@@ -52,7 +52,7 @@
 		 alt="A presentation from PyCon Israel 2023"
 		 title="A presentation from PyCon Israel 2023">
 	</span>
-	<span class="r2c1"> 
+	<span class="r2c1">
           <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-shai.jpg"
 	       alt="A presentation from PyCon Israel 2023"
 	       title="A presentation from PyCon Israel 2023">
@@ -69,19 +69,49 @@
 	</span>
     </section>
     <section id="about">
-      <h2>פייקון ישראל</h2>
+      <h2>אודות כנס פייקון ישראל</h2>
       <p>
-	פייקון ישראל 2024 יכלול יום של הרצאות שייערך בסינמה סיטי
-	גלילות, ויום סדנאות שמקומו יפורסם בהמשך.  שני ימים של למידה
-	ומפגשים, הנאה ושיתופי פעולה, סביב שפת פייתון.
+
+	פייקון ישראל הוא כנס העוסק בשפת התכנות פייתון, בטכנולוגיות
+	קשורות אליה, ובשימוש בהן. זהו אירוע של העוסקות והעוסקים בתחום,
+	לשיתוף ידע וחוויות, ליצירת קשרים אישיים וחיזוקם, וגם להנאה.
+
       </p>
       <p>
-      כנסי פייקון ישראל מתקיימים מאז 2016 - הנה הרצאה מהכנס של 2023
-      בשנת 2023 התקיימו <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">יום הרצאות</a>
-      ו<a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">יום סדנאות</a>;
-      את ההרצאות ניתן לראות ב<a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">וידאו</a>.
-      </p><p>
-	לפרטים נוספים, בקרו ב<a href="https://pycon.org.il/2023/heb/home.html">אתר כנס 2023</a>.
+
+	הכנס הוא המפגש הגדול ביותר של קהילת פייתון בישראל. הוא מתקיים
+	בקיץ מדי שנה (כמעט) מאז 2016. ברוח הקוד הפתוח, הכנס מאורגן
+	על־ידי מתנדבים ומתנדבות לטובת הקהילה כולה, תחת כנפי „המקור” -
+	העמותה הישראלית לתוכנה חופשית וקוד פתוח.
+
+      </p>
+      <p>
+
+	פייקון הוא כנס המחוייב לגיוון והכללה. הוא משלב הרצאות של
+	דמויות מובילות מהקהילה העולמית ומישראל, ופעילויות לקידום
+	הקהילה המקומית, חבריה וחברותיה.
+
+
+      </p>
+      <p>
+
+	פייקון ישראל 2024 יכלול יום של הרצאות שייערך בסינמה סיטי
+	גלילות, ויום סדנאות שמקומו יפורסם בהמשך.  שני ימים של למידה
+	ומפגשים, הנאה ושיתופי פעולה, סביב שפת פייתון &mdash; בהתאם
+	למסורת הנמשכת מאז שנת 2016.
+
+      </p>
+      <p>
+
+	בשנת 2023
+	התקיימו <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">יום
+	הרצאות</a>
+	ו<a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">יום
+	סדנאות</a>; את ההרצאות ניתן לראות
+	ב<a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">וידאו</a>.
+
+      <br/>
+      לפרטים נוספים, בקרו ב<a href="https://pycon.org.il/2023/heb/home.html">אתר כנס 2023</a>.
       </p>
     </section>
   </div>
