Minor design improvements
Font increment
Picture replacement
Minor text adjustments

--- a/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
+++ b/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
@@ -89,6 +89,9 @@ ul.fancy-list-marker {
     font-size: 1.1em;
     margin: 1.1em;
   }
+  li:lang(en) {
+    font-size: 1.2em;
+  }
 }
 
 aside {
@@ -205,6 +208,10 @@ main {
           font-weight: 600;
         }
       }
+    }
+
+    p:lang(en) {
+      font-size: 1.1em;
     }
 
     code, kbd, samp, pre {
