--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -43,29 +43,29 @@
     </section>
     <section id="pictures">
 	<span class="r1c1">
-            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-far.jpg"
-		 alt="A presentation from PyCon Israel 2023"
-		 title="A presentation from PyCon Israel 2023">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/oren.jpg"
+		 alt="A picture taken at PyCon Israel 2023"
+		 title="A picture taken at PyCon Israel 2023">
 	</span>
 	<span class="r1c2">
-            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/shai-back.jpg"
-		 alt="A presentation from PyCon Israel 2023"
-		 title="A presentation from PyCon Israel 2023">
+            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-far.jpg"
+		 alt="A picture taken at PyCon Israel 2023"
+		 title="A picture taken at PyCon Israel 2023">
 	</span>
 	<span class="r2c1">
           <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-shai.jpg"
-	       alt="A presentation from PyCon Israel 2023"
-	       title="A presentation from PyCon Israel 2023">
+	       alt="A picture taken at PyCon Israel 2023"
+	       title="A picture taken at PyCon Israel 2023">
 	</span>
 	<span class="r2c2">
             <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/pypods.jpg"
-		 alt="A presentation from PyCon Israel 2023"
-		 title="A presentation from PyCon Israel 2023">
+		 alt="A picture taken at PyCon Israel 2023"
+		 title="A picture taken at PyCon Israel 2023">
 	</span>
 	<span class="r2c3">
             <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/elad.jpg"
-		 alt="A presentation from PyCon Israel 2023"
-		 title="A presentation from PyCon Israel 2023">
+		 alt="A picture taken at PyCon Israel 2023"
+		 title="A picture taken at PyCon Israel 2023">
 	</span>
     </section>
     <section id="about">
