--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/icon.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/icon.html
@@ -1,4 +1,4 @@
-{% if FAVICON %}
-  <link rel="shortcut icon" href="{{ FAVICON }}" type="image/x-icon">
-  <link rel="icon" href="{{ FAVICON }}" type="image/x-icon">
-{% endif %}
+{# {% if FAVICON %} #}
+  <link rel="shortcut icon" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/pyconicon-2.png">
+  <link rel="icon" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/pyconicon-2.png">
+{# {% endif %} #}
