Fix #16 -- update text in home page to reflect CFP being open

--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -34,7 +34,7 @@
     <section id="plan">
       <h3>Welcome to PyCon Israel!</h3>
       <ul class="fancy-list-marker">
-	<li>CFP to open on <time datetime="2024-05-01">1.5.2024</time>
+	<li><b>CFP is open!</b> The deadline for submissions is <time datetime="2024-06-01">1.6.2024</time>
 	<li>To join our sponsors, please write to
 	  <a href="mailto:sponsors@pycon.org.il">sponsors@pycon.org.il</a>
 	<li>To subscribe to our mailing list for news and updates,
