--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage-he.html
@@ -34,7 +34,7 @@
     <section id="plan">
       <h3>ברוכים הבאים וברוכות הבאות לפייקון!</h3>
       <ul class="fancy-list-marker">
-	<li>קול קורא להגשת הרצאות ייפתח ב־<time datetime="2024-05-01">1.5.2024</time>
+	<li><b>הקול הקורא להגשת הרצאות נפתח!</b> ניתן להגיש עד <time datetime="2024-06-01">1.6.2024</time>
 	<li>להצטרפות אל נותני החסות שלנו,
 	  כתבו ל־<a href="mailto:sponsors@pycon.org.il">sponsors@pycon.org.il</a>
 	<li>להרשמה לרשימת תפוצה לחדשות ועדכונים,
