--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/og.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/og.html
@@ -7,10 +7,12 @@
   <meta property="og:site_name" content="{{ SITENAME }}"/>
   <meta property="og:type" content="blog"/>
   <meta property="og:title" content="{{ SITENAME }}"/>
-  <meta property="og:description" content="{{ SITEDESCRIPTION }}"/>
+  <meta property="og:description" content="{{ SITESUBTITLE }}"/>
   <meta property="og:locale" content="{{ default_locale }}"/>
   <meta property="og:url" content="{{ SITEURL }}"/>
   {% if SITELOGO %}
-  <meta property="og:image" content="{{ SITELOGO }}">
+  <meta property="og:image" content="{{ SITELOGO }}"/>
+  {% else %}
+  <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/PyConIL.png"/>
   {% endif %}
 {% endif %}
