--- a/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/homepage.html
@@ -20,96 +20,23 @@
   <header>
     <h1 id="{{ page.slug }}">PyCon Israel {{ PYCON.YEAR }}</h1>
     <h3>
-      <nobr>Cinema City, Gelilot</nobr>
+      <nobr>{{ PYCON.LOCATION[page.lang] }}</nobr>
       <span class="inline-separator">|</span>
-      <nobr><time datetime="2024-09-16">September 16, 2024</time></nobr>
+      <nobr><time datetime="{{ PYCON.TECH_DATE }}">{{ PYCON.DATES[page.lang] }}</time></nobr>
     </h3>
   </header>
   <div>
+    {% block before_content %}
     <section id="buttons">
+      {# TODO: These buttons should be controlled from config vars #}
       <a class="btn homebtn" href="#about">About</a>
       <a class="btn homebtn" href="https://cfp.pycon.org.il/pycon-2024/cfp">CFP</a>
       <a class="btn homebtn disabled" title="Tickets not yet available">Tickets</a>
     </section>
-    <section id="plan">
-      <h3>Welcome to PyCon Israel!</h3>
-      <ul class="fancy-list-marker">
-	<li><b>CFP is open!</b> The deadline for submissions is <time datetime="2024-06-08">8.6.2024</time>
-	<li>To join our sponsors, please write to
-	  <a href="mailto:sponsors@pycon.org.il">sponsors@pycon.org.il</a>
-	<li>To subscribe to our mailing list for news and updates,
-	  <a href="https://lists.hamakor.org.il/postorius/lists/news.pycon.org.il">click here</a>
-      </ul>
-    </section>
-    <section id="pictures">
-	<span class="r1c1">
-            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/oren.jpg"
-		 alt="A picture taken at PyCon Israel 2023"
-		 title="A picture taken at PyCon Israel 2023">
-	</span>
-	<span class="r1c2">
-            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-far.jpg"
-		 alt="A picture taken at PyCon Israel 2023"
-		 title="A picture taken at PyCon Israel 2023">
-	</span>
-	<span class="r2c1">
-          <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-shai.jpg"
-	       alt="A picture taken at PyCon Israel 2023"
-	       title="A picture taken at PyCon Israel 2023">
-	</span>
-	<span class="r2c2">
-            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/pypods.jpg"
-		 alt="A picture taken at PyCon Israel 2023"
-		 title="A picture taken at PyCon Israel 2023">
-	</span>
-	<span class="r2c3">
-            <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/elad.jpg"
-		 alt="A picture taken at PyCon Israel 2023"
-		 title="A picture taken at PyCon Israel 2023">
-	</span>
-    </section>
-    <section id="about">
-      <h2>About PyCon Israel</h2>
-      <p>
-	PyCon Israel is a conference dedicated to the Python
-	programming language, related technologies, and their use. It
-	is an event for practitioners to share knowledge and
-	experiences, an opportunity to network, and an occasion to
-	have some fun.
-      </p>
-      <p>
-	The conference is the largest gathering of this community in
-	Israel. It is held annually, almost every summer since
-	2016. In the spirit of Open Source, it is produced by a team
-	of volunteers, under the auspices of Hamakor, the Israeli Free
-	Software and Open Source organization.
-      </p>
-      <p>
-	PyCon is a diverse conference dedicated to providing an
-	enjoyable experience to everyone - and features international
-	keynote speakers and talks from local Python experts, as well
-	as community-building activities.
-      </p>
-      <p>
-	PyCon Israel 2024 will include a day of talks at Cinema
-	City, Gelilot, and a day of workshops (location to be
-	announced).  Two days of learning and socializing, fun and
-	collaboration, all around Python &mdash; continuing the
-	tradition started in 2016.
-      </p>
-      <p>
-	In 2023 we
-	had <a href="https://photos.app.goo.gl/UVupGP8N7q3UVPct5">a
-	day of talks</a>
-	and <a href="https://photos.app.goo.gl/B12ZznWWJN2cS2Sk6">a
-	day of workshops</a>;
-	<a href="https://www.youtube.com/playlist?list=PLnOlTVPC-yFwhpiyjsC0V_98pqRbtwNgh">
-	videos of the talks </a>are available.
-      <br/>
-	For more details, visit the
-	<a href="https://pycon.org.il/2023/index.html">2023 conference website</a>.
-      </p>
-    </section>
+    {% endblock %}
+    {% block page_content %}{{ page.content }}{% endblock %}
+    {% block after_content %}{% endblock %}
+
   </div>
 </article>
 {% endblock %}
