Define irit-far.jpg as the og:image content
This, together with using "make publish" instead of "make html",
should properly fix #17.

--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/og.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/og.html
@@ -13,6 +13,6 @@
   {% if SITELOGO %}
   <meta property="og:image" content="{{ SITELOGO }}"/>
   {% else %}
-  <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/PyConIL.png"/>
+  <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-far.jpg"/>
   {% endif %}
 {% endif %}
