Make sponsors page separate, leave only logos on homepage

--- a/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
+++ b/website_2024/themes/PyCon-Israel-Flex/static/stylesheet/style.less
@@ -943,6 +943,7 @@ div.figure.align-right {
 	max-height: 100px;
     }
 }
+    
 
 .sp-gold .sp-square {
     max-height: 120px;
@@ -950,6 +951,33 @@ div.figure.align-right {
     img {
 	max-height: 90px;
     }
+}
+
+.sp-just-logo {
+    display: grid;
+    align-content: center;
+}
+
+.sp-diamond .sp-just-logo, .sp-diamond .sp-just-logo img {
+    max-height: 100px;
+}
+
+.sp-gold .sp-just-logo, .sp-gold .sp-just-logo img {
+    max-height: 90px;
+}
+
+.sp-silver .sp-just-logo, .sp-silver .sp-just-logo img {
+    max-height: 80px;
+}
+
+.sp-friends .sp-just-logo, .sp-friends .sp-just-logo img {
+    max-height: 70px;
+}
+
+.sp-just-logo img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .sp-description {
