--- a/website_2024/themes/PyCon-Israel-Flex/templates/partial/sponsors.html
+++ b/website_2024/themes/PyCon-Israel-Flex/templates/partial/sponsors.html
@@ -2,10 +2,22 @@
 {# <div class="sp-level"> #}
 <a href="{{ page.sp_link }}" class="sp-square with-description">
     <div class="sp-logo">
-        <img src="{{ SITEURL }}/images/sponsor-logos/{{ page.sp_logo }}" alt="{{ page.title }} Logo">
+        <img src="{{ main_siteurl }}/images/sponsor-logos/{{ page.sp_logo }}" alt="{{ page.title }} Logo">
     </div>
     <div class="sp-description">
-      {{ page.content }}
+      <bdi lang="{{ page.lang }}">
+	{{ page.content }}
+      </bdi>
+    </div>
+</a>
+{# </div> #}
+{% endmacro %}
+
+{% macro sponsor_logo_for(page) %}
+{# <div class="sp-level"> #}
+<a href="{{ page.sp_link }}" class="sp-just-logo">
+    <div class="sp-logo">
+        <img src="{{ main_siteurl }}/images/sponsor-logos/{{ page.sp_logo }}" alt="{{ page.title }} Logo" title="{{ page.summary | striptags }}">
     </div>
 </a>
 {# </div> #}
