--- a/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
@@ -38,7 +38,7 @@
         {% for label, url, icon, hide_label in SOCIAL_LINKS %}
         <a href="{{ url }}">
             {% if icon %}
-                <i class="mdi mdi-{{ icon }}"></i>
+                <i class="fa-brands fa-{{ icon }}"></i>
                 {% if not hide_label %}
                     {{ label }}
                 {% endif %}
