Basic Hebrew support
Some elements still need to be made translatable, but the basic
structure, including language-switching links, works.

--- a/website_2025/themes/PyCon-Israel-peliconf/sass/02_elements/_general.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/02_elements/_general.scss
@@ -88,9 +88,11 @@ hr {
     height: 50px;
 }
 
+////////////////////////////////////////////////////////////////////////////////
+// Hebrew support
+////////////////////////////////////////////////////////////////////////////////
 
-
-
-
-
+*:lang(he) {
+  direction: rtl;
+}
 
