--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
@@ -147,8 +147,11 @@
             color: $yellow;
         }
 
-        &:last-child {
+        &:lang(en):last-child {
             margin-right: 0;
+        }
+        &:lang(he):last-child {
+            margin-left: 0;
         }
     }
 
