Basic fixes to colors of heading and buttons

--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
@@ -173,6 +173,7 @@
 .page-heading {
     @include background-image(linear-gradient(to bottom right, $blueish, shade($blueish, 20)));
     color: $white;
+    background: $blue;
 }
 
 .page-heading__title {
