--- a/website_2025/themes/PyCon-Israel-peliconf/sass/03_objects/_buttons.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/03_objects/_buttons.scss
@@ -26,13 +26,15 @@
 }
 
 .btn--primary {
+    // FIXME: background-image from compass is broken
     @include background-image(linear-gradient(to bottom right, $yellow, shade($yellow, 20)));
-    color: $blue;
-    border: 1px solid $yellow;
+    color: $almost-white;
+    border: 1px solid $white;
 
     &:hover {
         @include background-image(linear-gradient(to bottom right, $yellow, tint($yellow, 20)));
-        color: $blue;
+        background: $white;
+        color: $yellow;
     }
 
     &:focus {
@@ -45,14 +47,16 @@
 }
 
 .btn--secondary {
-    color: $almost-white;
-    border: 1px solid $white;
+    color: $grey-medium;
+    border: 1px solid $grey-medium;
 
+    // We use "secondary" for "disabled"
     &:hover {
-        background: $white;
-        color: $yellow;
+        // background: $grey-light;
+        color: $grey-medium;
     }
 
+    /*
     &:focus {
         @include box-shadow(inset 0 0 0 2px rgba(black, .15));
         color: $white;
@@ -64,6 +68,7 @@
         color: $white;
         background: $grey-dark;
     }
+    */
 }
 
 .btn--block {
