Set up footer properly
Add links to past events and a Github link to the repo for the site,
put a language-relative link to the CoC.

--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-footer.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-footer.scss
@@ -35,13 +35,16 @@
     }
 }
 
-.site-footer-navigation a {
+.site-footer-navigation {
     @include font-size(14);
     text-transform: uppercase;
     margin-right: $gutter;
     color: $almost-white;
 
-    &:hover {
-        color: $yellow;
+    a {
+        color: $almost-white;
+        &:hover {
+            color: $yellow;
+        }
     }
 }
