Replace sponsors placeholder page and section with a button

--- a/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
@@ -165,6 +165,7 @@
 </section>
 {% endif %}
 
+{% if EVENT_PARTNERS %}
 <section class="site-partners">
     <div class="container">
     <div class="grid">
@@ -229,5 +230,6 @@
     </div>
     </div>
 </section>
+{% endif %}{# EVENT_PARTNERS #}
 
 {% endblock content %}
