--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
@@ -66,7 +66,12 @@
     }
 
     ul {
-        float: right;
+        &:dir(rtl) {
+            float: right;
+        }
+        &:dir(ltr) {
+            float: left;
+        }
     }
 
     li {
@@ -147,10 +152,10 @@
             color: $yellow;
         }
 
-        &:lang(en):last-child {
+        &:dir(ltr):last-child {
             margin-right: 0;
         }
-        &:lang(he):last-child {
+        &:dir(rtl):last-child {
             margin-left: 0;
         }
     }
