--- a/website_2025/themes/PyCon-Israel-peliconf/templates/base.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ DEFAULT_LANG }}">
+<html lang="{{ DEFAULT_LANG }}" dir="{{ BIDI_DIR }}">
 <head>
 {% block head %}
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
