--- a/website_2025/themes/PyCon-Israel-peliconf/templates/base.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/base.html
@@ -160,7 +160,7 @@
         </section>
         {% endif %}
         <p class="site-footer__copyright">
-            {{ COPYRIGHT }}
+            <bdi>{{ COPYRIGHT }}</bdi>
         </p>
     </div>
     </div>
