--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-header.scss
@@ -25,8 +25,11 @@
     .btn {
         margin-right: $gutter;
 
-        &:last-child {
+        &:dir(ltr):last-child {
             margin-right: 0;
+        }
+        &:dir(rtl):last-child {
+            margin-left: 0;
         }
     }
 }
