Mostly-quick-fix formatting of workshop-juniors blog post

--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-main.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-main.scss
@@ -80,7 +80,8 @@
     }
 
     dt {
-        @include font-size(18);
+        /* @include font-size(18); */
+        font-weight: bold;
         color: $blue;
     }
 
