Fix broken links with translations
With the code before this commit, in the Hebrew homepage:
- Links to translated blog articles point to English version
- Links to untranslated blog articles are broken

This fixes both, and gives untranslated articles a LTR direction
(so some of the menu etc is reversed, but the main content is
displayed properly)

--- a/website_2025/themes/PyCon-Israel-peliconf/templates/base.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="{{ DEFAULT_LANG }}" dir="{{ BIDI_DIR }}">
+{% set webpage = page or article or None %}
+<html lang="{{ DEFAULT_LANG }}" dir="{{ BIDI_DIR[webpage.lang or DEFAULT_LANG] }}">
 <head>
 {% block head %}
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
