--- a/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
@@ -81,7 +81,7 @@
                     </aside>
                     <header class="news-article__header">
                         <h2 class="news-article__header__title">
-                            <a href="{{ main_siteurl }}/{{ article.url }}"
+                            <a href="{{ SITEURL }}/{{ article.url }}"
                                 rel="bookmark"
                                 title="{{ article.title|striptags }}">
                                     {{ article.title }}
