--- a/website_2025/themes/PyCon-Israel-peliconf/templates/partials/og.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/partials/og.html
@@ -7,12 +7,12 @@
   <meta property="og:site_name" content="{{ SITENAME }}"/>
   <meta property="og:type" content="blog"/>
   <meta property="og:title" content="{{ SITENAME }}"/>
-  <meta property="og:description" content="{{ SITESUBTITLE }}"/>
+  <meta property="og:description" content="{{ EVENT_CLAIM }}"/>
   <meta property="og:locale" content="{{ default_locale }}"/>
   <meta property="og:url" content="{{ SITEURL }}"/>
   {% if SITELOGO %}
   <meta property="og:image" content="{{ SITELOGO }}"/>
   {% else %}
-  <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/2023/irit-far.jpg"/>
+  <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/PyConIL.png"/>
   {% endif %}
 {% endif %}
