--- a/website_2025/themes/PyCon-Israel-peliconf/templates/partials/og_article.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/partials/og_article.html
@@ -19,7 +19,10 @@
   {% endfor %}
   {% if 'cover' in article.metadata %}
   <meta property="og:image" content="{{ SITEURL }}/{{ article.metadata['cover'] }}">
+  {% else %}{% if SITELOGO %}
+  <meta property="og:image" content="{{ SITELOGO }}"/>
   {% else %}
-  <meta property="og:image" content="{{ SITELOGO }}">
+  <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/PyConIL.png"/>
+  {% endif %}
   {% endif %}
 {% endif %}
