--- a/website_2025/themes/PyCon-Israel-peliconf/templates/partials/partner-link.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/partials/partner-link.html
@@ -1,5 +1,5 @@
 
 <a href="{{ p.1 }}" class="partner-link">
-    <img src="{{ main_siteurl }}/theme/images/{{ p.2 }}"
+    <img src="{{ main_siteurl }}/images/sponsor-logos/{{ p.2 }}"
         class="partner-link__img" alt="{{ p.0 }}" />
 </a>
