--- a/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
+++ b/website_2025/themes/PyCon-Israel-peliconf/templates/index.html
@@ -165,68 +165,51 @@
 </section>
 {% endif %}
 
-{% if EVENT_PARTNERS %}
+{% if SPONSOR_LEVELS %}
 <section class="site-partners">
     <div class="container">
     <div class="grid">
-    <div class="s-12 last">
-        <h2 class="small site-partners__title">Sponsors</h2>
+    <div class="s-12 last-s">
+        <h2 class="small site-partners__title">{{ SPONSORS_TITLE }}</h2>
     </div>
+    {% import 'partials/sponsors.html' as sponsors with context %}
+    {% for sp_level, sp_pages in pages|groupby("sp_level", default="") if sp_level %}
+    <div class="sp-level {{ SPONSOR_LEVELS[sp_level]['class'] }}">
+      <h3 class="small site-partners__title">{{ SPONSOR_LEVELS[sp_level].name[DEFAULT_LANG] }}</h3>
+    </div>
+    <div class="sp-level {{ SPONSOR_LEVELS[sp_level]['class'] }}">
+      {% for sp_page in sp_pages %}
+      {{ sponsors.sponsor_logo_for_home(sp_page) }}
+      {% endfor %}
+    </div>
+    {% endfor %}
+    {# commented out peliconf
     <div class="s-12 m-6 l-3 last-s">
-        <div class="partner-diamond">
-            <h2 class="small">Diamond Sponsors</h2>
-            {% for p in EVENT_PARTNERS['diamond'] %}
-                {% include 'partials/partner-link.html' %}
-            {% endfor %}
-            <a href="{{ SITEURL }}/pages/partnership.html" class="partner-link partner-link--become">
-                Become a sponsor!
-            </a>
-        </div>
+       <div class="partner-diamond">
+         <h2 class="small">Diamond Sponsors</h2>
+         {% for p in EVENT_PARTNERS['diamond'] %}
+         {% include 'partials/partner-link.html' %}
+         {% endfor %}
+         <a href="{{ SITEURL }}/pages/partnership.html" class="partner-link partner-link--become">
+           Become a sponsor!
+         </a>
+       </div>
     </div>
-    <div class="s-12 m-6 l-3 last-s last-m">
-        <div class="partner-platinum">
-            <h2 class="small">Platinum Sponsors</h2>
-            {% for p in EVENT_PARTNERS['platinum'] %}
-                {% include 'partials/partner-link.html' %}
-            {% endfor %}
-            <a href="{{ SITEURL }}/pages/partnership.html" class="partner-link partner-link--become">
-                Become a sponsor!
-            </a>
-        </div>
-    </div>
-    <div class="s-12 m-6 l-3 last-s">
-        <div class="partner-gold">
-            <h2 class="small">Gold Sponsors</h2>
-            {% for p in EVENT_PARTNERS['gold'] %}
-                {% include 'partials/partner-link.html' %}
-            {% endfor %}
-            <a href="{{ SITEURL }}/pages/partnership.html" class="partner-link partner-link--become">
-                Become a sponsor!
-            </a>
-        </div>
-    </div>
-    <div class="s-12 m-6 l-3 last">
-        <div class="partner-silver">
-            <h2 class="small">Silver Sponsors</h2>
-            {% for p in EVENT_PARTNERS['silver'] %}
-                {% include 'partials/partner-link.html' %}
-            {% endfor %}
-            <a href="{{ SITEURL }}/pages/partnership.html" class="partner-link partner-link--become">
-                Become a sponsor!
-            </a>
-        </div>
-    </div>
+    #}
+    {# commented out peliconf
+    In original, partners are separate from the columns of sponsors
     <div class="s-12 last">
         <div class="partner-media ">
-            <h2 class="small partner-media__title">Media Partner</h2>
-            {% for p in EVENT_PARTNERS['media'] %}
+            <h2 class="small partner-media__title">Partners</h2>
+            {% for p in EVENT_PARTNERS['partner'] %}
                 <a href="{{ p.1 }}" class="partner-media-link">
-                    <img src="{{ main_siteurl }}/theme/images/{{ p.2 }}"
+                    <img src="{{ main_siteurl }}/images/sponsor-logos/{{ p.2 }}"
                         class="partner-media-link__img" alt="{{ p.0 }}" />
                 </a>
             {% endfor %}
         </div>
     </div>
+    #}
     </div>
     </div>
 </section>
