--- a/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-partners.scss
+++ b/website_2025/themes/PyCon-Israel-peliconf/sass/04_components/_site-partners.scss
@@ -94,6 +94,122 @@
 }
 
 .site-partners__title {
-    padding-bottom: $gutter * 2;
+    padding-top: $gutter;
+    padding-bottom: $gutter;
     margin-bottom: 0;
+    grid-column: 1 / -1;
+}
+
+//
+// Sponsors -- copied from PyCon-Israel-Flex
+//
+// This part copied from a CSS (not LESS) source, so
+// could probably be rephrased to look nicer here
+
+@media only screen and (max-width: 800px) {
+    .sp-level {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .sp-level {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+.sp-square {
+    min-width: 175px;
+    min-height: 100px;
+    max-height: 100px;
+    border-radius: 16px;
+    border: 0.806px solid #DADADA;
+    background: #fff;
+    box-shadow: 0px 3px 16px 0px rgba(136, 136, 136, 0.35) inset;
+    padding: 30px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    .sp-logo {
+	flex-basis: 100%;
+	display: flex;
+	justify-content: center;
+	img {
+	    max-height: 80px;
+	}
+    }
+}
+
+.sp-diamond .sp-square {
+    max-height: 140px;
+    min-width: 225px;
+    img {
+	max-height: 100px;
+    }
+}
+    
+
+.sp-gold .sp-square {
+    max-height: 120px;
+    min-width: 200px;
+    img {
+	max-height: 90px;
+    }
+}
+
+.sp-just-logo {
+    display: grid;
+    align-content: center;
+}
+
+.sp-diamond .sp-just-logo, .sp-diamond .sp-just-logo img {
+    max-height: 100px;
+}
+
+.sp-gold .sp-just-logo, .sp-gold .sp-just-logo img {
+    max-height: 90px;
+}
+
+.sp-silver .sp-just-logo, .sp-silver .sp-just-logo img {
+    max-height: 80px;
+}
+
+.sp-friends .sp-just-logo, .sp-friends .sp-just-logo img {
+    max-height: 70px;
+}
+
+.sp-just-logo img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.sp-description {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    height: calc(100% - 50px);
+    width: calc(100% - 50px);
+    overflow: auto;
+}
+
+.sp-square.with-description:hover .sp-logo {
+    opacity: 0;
+}
+
+.sp-square.with-description:hover .sp-description {
+    opacity: 1;
+}
+
+.sp-level {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    flex-basis: 100%;
 }
